[package]
name = "har-analyzer"
version = "0.1.6"
edition = "2021"
authors = ["yinheli <me@yinheli.com>"]
description = """
HAR file analyzer
"""
readme = "README.md"
repository = "https://github.com/yinheli/har-analyzer"
homepage = "https://github.com/yinheli/har-analyzer"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1"
serde = "1"
serde_derive = "1"
har = "0.7"
url = "2"
rayon = "1"
trust-dns-resolver = { version = "0.22", features = ["dns-over-rustls"] }
fastping-rs = "0.2"
maxminddb = "0.23"
dirs = "4"
reqwest = { version = "0.11", features = ["rustls-tls", "blocking"], default-features = false }
tabled = "0.10"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = 'abort'
